# bulletin1

./: .gitignore  main.py  pyproject.toml
app/: dependencies.py  main.py
app/config/: database.py  lifespan.py  settings.py
app/controller/api/: post.py  post_controller.py
app/controller/view/: post.py  view.py  view_test.py
app/dto/: create_post.py  delete_post.py  post_response.py  update_post.py
app/entity/: post.py  user.py
app/repository/: post_repository.py  post_repository_impl.py
app/service/: post_service.py  post_service_impl.py
mysql/: docker-compose.yml
resources/styles/: auth.css  base.css  main.css  navigation.css
resources/templates/: auth.html  favicorn.html  main.html  main_test.html  navigation.html  test_navigation.html
test/: test_db_connection_and_tables.py
